--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
+        <script src="https://kit.fontawesome.com/8193f4cc41.js" crossorigin="anonymous"></script>
         <title>Modele</title>
     </head>
     <body>
