--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<meta http-equiv="x-ua-compatible" content="ie=edge" />
+        <meta http-equiv="x-ua-compatible" content="ie=edge" />
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 <!-- 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
+    
  -->        <title>Modele</title>
       
     </head>
