--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -10,7 +10,7 @@
 
 <!-- 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
     
- -->        <title>Modele</title>
+ -->        <title>Lions Club Paradou-les-Alpilles</title>
       
     </head>
     <body>
