--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -12,6 +12,13 @@
     
  -->        <title>Lions Club Paradou-les-Alpilles</title>
       
+ <scripttype="text/javascript"src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+ </script>
+ <scripttype="text/javascript">
+ (function() {
+ emailjs.init("user_HQ3amBPUSryNqpUfrStDk");
+ })();
+ </script>
     </head>
     <body>
         <div id="root"></div>
