make email directly on the contact page work

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -12,12 +12,12 @@
     
  -->        <title>Lions Club Paradou-les-Alpilles</title>
       
- <scripttype="text/javascript"src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+ <script type="text/javascript"src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
  </script>
- <scripttype="text/javascript">
- (function() {
- emailjs.init("user_HQ3amBPUSryNqpUfrStDk");
- })();
+ <script type="text/javascript">
+    (function(){
+       emailjs.init("service_0il7y5q"); // Obtain your user ID at the dashboard https://dashboard.emailjs.com/integration
+    })();
  </script>
     </head>
     <body>
